set up module and lesson route
